Add dev files + secrets to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Config and passwords
+*.env
+.env
+
+instructions.md
+
+# IDE
+.idea
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,7 +112,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
