Build a simple Producer
Currently only sends static messages

--- a/local.env.example
+++ b/local.env.example
@@ -4,4 +4,7 @@ POSTGRES_PASSWORD=password
 POSTGRES_USER=scrawebp
 POSTGRES_DB=scrawebp
 KAFKA_TOPIC=scrawebp
+KAFKA_BOOTSTRAP_SERVER=localhost:9092
 
+# How much time between pinging the website
+PRODUCER_INTERVAL_SECONDS=10
