--- a/local.env.example
+++ b/local.env.example
@@ -3,8 +3,15 @@
 KAFKA_TOPIC=scrawebp
 KAFKA_BOOTSTRAP_SERVER=localhost:9092
 
-# How much time between pinging the website
+# How much time between pinging/scraping the URL
 PRODUCER_INTERVAL_SECONDS=10
+# Which website to scrape
+PRODUCER_SCRAPE_URL=https://www.google.com
+# the regex to match the content with.
+# Danger: some chars might need double escaping, e.g. / -> \\\/!
+PRODUCER_SCRAPE_REGEX=<title>Google<\\\/title>
+# <=0 means run forever
+PRODUCER_MAX_LOOPS=10
 
 CONSUMER_POSTGRES_USER=scrawebp
 CONSUMER_POSTGRES_PASSWORD=password
