Unify the source directories and name project "checkweb"

--- a/local.env.example
+++ b/local.env.example
@@ -1,6 +1,7 @@
 # For local development: kafka and postgres in a container, consumer and producer running locally
-# scraped website ping
-KAFKA_TOPIC=scrawebp
+
+# changing this needs a restart of the local infra: make stop-local-infra
+KAFKA_TOPIC=checkweb
 KAFKA_BOOTSTRAP_SERVER=localhost:9092
 
 # How much time between pinging/scraping the URL
@@ -8,14 +9,15 @@ PRODUCER_INTERVAL_SECONDS=10
 # Which website to scrape
 PRODUCER_SCRAPE_URL=https://www.google.com
 # the regex to match the content with.
-# Danger: some chars might need double escaping, e.g. / -> \\\/!
-PRODUCER_SCRAPE_REGEX=<title>Google<\\\/title>
+# Danger: some chars might need double escaping, e.g. / -> \/!
+PRODUCER_SCRAPE_REGEX=<title>Google<\/title>
 # <=0 means run forever
 PRODUCER_MAX_LOOPS=10
 
-CONSUMER_POSTGRES_USER=scrawebp
+# Changing and *_POSTGRES_* requires a restart of the local infra: make stop-local-infra
+CONSUMER_POSTGRES_USER=checkweb
 CONSUMER_POSTGRES_PASSWORD=password
-CONSUMER_POSTGRES_DB=scrawebp
+CONSUMER_POSTGRES_DB=checkweb
 CONSUMER_POSTGRES_HOST=localhost
 CONSUMER_POSTGRES_PORT=5555
 
