Switch to env loading in the python code
needed to switch between different envs

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,14 @@ kafka-python>=2.0
 psycopg2-binary>=2.8.0
 
 # commandline interface
-click>=7.1
+python-dotenv
 
 # scraping and pinging
 # Usually I would use requests, but this seemed like a nice time to try httpx out, which seems to be the
 # successor due to asyncio support: https://github.com/encode/httpx
 # -> "considered in beta [...] API stable [...] A 1.0 release is expected to be issued sometime in late 2020."
-httpx=0.16.*
-pytest-httpx=0.10.*
+httpx==0.16.*
+pytest-httpx==0.10.*
 
 # testing
 pytest>=6.1
