Enable connections to secured kafka/postgresql

--- a/local.env.example
+++ b/local.env.example
@@ -3,6 +3,10 @@
 # changing this needs a restart of the local infra: make stop-local-infra
 KAFKA_TOPIC=checkweb
 KAFKA_BOOTSTRAP_SERVER=localhost:9092
+# If empty, will connect without ssl/auth
+# Either a absolute path or relative to the src directory (if used with make run-aiven)!
+# needs to contain service.cert, service.key, ca.pem files (download from kafka service in the UI)
+KAFKA_CERT_PATH=
 
 # How much time between pinging/scraping the URL
 PRODUCER_INTERVAL_SECONDS=10
@@ -20,6 +24,8 @@ CONSUMER_POSTGRES_PASSWORD=password
 CONSUMER_POSTGRES_DB=checkweb
 CONSUMER_POSTGRES_HOST=localhost
 CONSUMER_POSTGRES_PORT=5555
+# If empty, will connect without ssl. For Aiven set to: require
+CONSUMER_POSTGRES_SSL_MODE=
 
 
 
