Allow running the integration tests against Aiven infra

--- a/local.env.example
+++ b/local.env.example
@@ -1,6 +1,9 @@
 # For local development: kafka and postgres in a container, consumer and producer running locally
+# For Aiven Infrastructure: `make setup-infra-aiven` sets up stuff but you still have to edit the respective
+#                           KAFKA_*/CONSUMER_POSTGRES_* settings
 
 # changing this needs a restart of the local infra: make stop-local-infra
+# Both local and aiven infrastructure are setup to autocreate topics
 KAFKA_TOPIC=checkweb
 KAFKA_BOOTSTRAP_SERVER=localhost:9092
 # If empty, will connect without ssl/auth
