Fix some typos and leftovers

--- a/local.env.example
+++ b/local.env.example
@@ -1,9 +1,10 @@
-# For local development: kafka and postgres in a container, consumer and producer running locally
+# For local development: kafka and postgres in a container, consumer and producer running locally -> can be used
+#                        as is in `local.env`
 # For Aiven Infrastructure: `make setup-infra-aiven` sets up stuff but you still have to edit the respective
-#                           KAFKA_*/CONSUMER_POSTGRES_* settings
+#                           KAFKA_*/CONSUMER_POSTGRES_* settings in `aiven.env`
 
-# changing this needs a restart of the local infra: make stop-local-infra
-# Both local and aiven infrastructure are setup to autocreate topics
+# changing this needs a restart of the local infra: make stop-infra-local
+# Both local and Aiven infrastructure are setup to autocreate topics
 KAFKA_TOPIC=checkweb
 KAFKA_BOOTSTRAP_SERVER=localhost:9092
 # If empty, will connect without ssl/auth
@@ -16,12 +17,12 @@ PRODUCER_INTERVAL_SECONDS=10
 # Which website to scrape
 PRODUCER_SCRAPE_URL=https://www.google.com
 # the regex to match the content with.
-# Danger: some chars might need double escaping, e.g. / -> \/!
+# Danger: some chars might need escaping, e.g. / -> \/!
 PRODUCER_SCRAPE_REGEX=<title>Google<\/title>
 # <=0 means run forever
 PRODUCER_MAX_LOOPS=10
 
-# Changing and *_POSTGRES_* requires a restart of the local infra: make stop-local-infra
+# Changing any *_POSTGRES_* requires a restart of the local infra: make stop-infra-local
 CONSUMER_POSTGRES_USER=checkweb
 CONSUMER_POSTGRES_PASSWORD=password
 CONSUMER_POSTGRES_DB=checkweb
